--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# IDEs
+.idea
+
 /vendor/
 node_modules/
 npm-debug.log
@@ -7,7 +10,7 @@ yarn-error.log
 bootstrap/compiled.php
 app/storage/
 
-# Laravel 5 & Lumen specific
+# Laravel 7 & Lumen specific
 public/storage
 public/hot
 
