--- a/docker/customize/etc/php7/conf.d/xdebug.ini
+++ b/docker/customize/etc/php7/conf.d/xdebug.ini
@@ -9,13 +9,13 @@
 ;   volumes:
 ;     - ./xdebug.ini:/etc/php7/conf.d/xdebug.ini
 ;
-zend_extension=xdebug.so
+;zend_extension=xdebug.so
 
-xdebug.mode=debug
-xdebug.client_host=host.docker.internal
-xdebug.client_port=9003
-xdebug.start_with_request = 1
-xdebug.discover_client_host = 0
-xdebug.remote_handler = dbgp
+;xdebug.mode=debug
+;xdebug.client_host=host.docker.internal
+;xdebug.client_port=9003
+;xdebug.start_with_request = 1
+;xdebug.discover_client_host = 1
+;xdebug.remote_handler = dbgp
 
-xdebug.idekey = PHPSTORM
+;xdebug.idekey = PHPSTORM
