--- a/docker/customize/etc/php7/conf.d/xdebug.ini
+++ b/docker/customize/etc/php7/conf.d/xdebug.ini
@@ -1,5 +1,4 @@
-; XDebug 2.5.5 https://2.xdebug.org/docs/
-; Need add extra_hosts in docker-compose.yml to help web container find real local's IP to send via port 9001
+; Need add extra_hosts in docker-compose.yml to help web container find real local's IP to send via port 9003
 ; web:
 ;   extra_hosts:
 ;     - "host.docker.internal:host-gateway"
@@ -9,13 +8,13 @@
 ;   volumes:
 ;     - ./xdebug.ini:/etc/php7/conf.d/xdebug.ini
 ;
-;zend_extension=xdebug.so
-;
+zend_extension=xdebug.so
+
 ;xdebug.mode=debug
-;xdebug.client_host=host.docker.internal
-;xdebug.client_port=9003
-;xdebug.start_with_request = 1
-;xdebug.discover_client_host = 0
-;xdebug.remote_handler = dbgp
-;
-;xdebug.idekey = PHPSTORM
+xdebug.client_host=host.docker.internal
+xdebug.client_port=9003
+xdebug.start_with_request = 1
+xdebug.discover_client_host = 1
+xdebug.remote_handler = dbgp
+
+xdebug.idekey = PHPSTORM
